--- a/fornt-end/src/App.css
+++ b/fornt-end/src/App.css
@@ -9,7 +9,7 @@
 
 
 .nav-ul {padding: 5px; margin: 0; background-color: skyblue;}
-.nav-ul li a{ color: fff; padding: 5px;text-decoration: none;}
+.nav-ul li a{ color: #ffffff; padding: 5px;text-decoration: none;}
 .nav-ul li {display: inline-block; padding: 10px; list-style-type: none;} 
 
 .inputBox {
