--- a/fornt-end/src/App.css
+++ b/fornt-end/src/App.css
@@ -15,13 +15,36 @@
 
 .inputBox {
   display: block;
-  margin: 25px;
+  margin: 25px auto;
   padding: 7px;
   width: 300px;
   border: 1px solid skyblue;
 
 }
  .btn-reg{ margin: 25px; padding: 10px;width: 150px; background-color: skyblue;border: 0;}
+
+ .invalid-input{
+  color:red;
+  margin-top: -20px;
+  display: block;
+  margin-left: 20px;
+ }
+
+ .product-list {padding-bottom: 5%;}
+
+ .product-list ul{
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0;
+
+   }
+
+.product-list ul li{
+  border: 1px solid skyblue;
+  padding: 8px;
+  width: 10%;
+  display: inline-block;
+}
 
 
 
@@ -50,7 +73,7 @@
 /* Footer */
 
 .footer{
-   position: absolute;
+   position: fixed;
    bottom: 0;
    text-align: center;
    width: 100%;
